# greenhome-certification

./: .dockerignore  .replit  package-lock.json  package.json  pyproject.toml  replit.md  run_python.sh  start_dev.sh
client/: requirements.md
client/src/: App.tsx  index.css
client/src/components/: Layout.tsx  StatusBadge.tsx
client/src/hooks/: use-auditors.ts  use-audits.ts  use-files.ts  use-profiles.ts  use-requests.ts
client/src/pages/: Dashboard.tsx  Landing.tsx  NewRequest.tsx  ProfileSetup.tsx  RequestDetail.tsx  RequestList.tsx  TestLogin.tsx
docker/: .dockerignore  .env.example  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  requirements.txt
python_backend/: database.py  main.py  models.py  schemas.py
python_backend/routes/: auditors.py  audits.py  auth.py  files.py  profiles.py  requests.py  uploads.py
scripts/: push-to-github.ts
server/: github.ts  routes.ts  storage.ts
shared/: routes.ts  schema.ts
